--- a/about/1.plist
+++ b/about/1.plist
@@ -41,7 +41,7 @@
 					<key>subtitle</key>
 					<string>Apple</string>
 					<key>title</key>
-					<string>${appName}</string>
+					<string>aicmt</string>
 				</dict>
 			</dict>
 		</array>
