--- a/about/1.plist
+++ b/about/1.plist
@@ -33,9 +33,9 @@
 				<key>metadata</key>
 				<dict>
 					<key>bundle-identifier</key>
-					<string>com.roylee.xin</string>
+					<string>com.ai.aicmt-OC</string>
 					<key>bundle-version</key>
-					<string>1.0</string>
+					<string>2.0.2</string>
 					<key>kind</key>
 					<string>software</string>
 					<key>subtitle</key>
